# zed

./: Cargo.toml
crates/agent_ui/src/: agent_panel.rs  thread_metadata_store.rs  thread_worktree_archive.rs
crates/editor/src/: completions.rs  editor.rs  element.rs  input.rs
crates/fs/src/: fs_watcher.rs
crates/gpui/: Cargo.toml
crates/gpui/src/: app.rs  platform.rs  profiler.rs  window.rs
crates/gpui/src/platform/test/: dispatcher.rs
crates/gpui/src/profiler/: actions.rs
crates/gpui_linux/src/linux/: dispatcher.rs
crates/gpui_linux/src/linux/wayland/: client.rs
crates/gpui_linux/src/linux/x11/: client.rs
crates/gpui_macos/src/: platform.rs  window.rs
crates/gpui_web/src/: dispatcher.rs  platform.rs
crates/gpui_windows/src/: dispatcher.rs
crates/markdown/src/: markdown.rs  parser.rs
crates/markdown_preview/src/: markdown_preview_view.rs
crates/miniprofiler_ui/src/: miniprofiler_ui.rs
crates/notes/: Cargo.toml
crates/notes/src/: backlinks.rs  notes.rs
crates/remote_server/src/: headless_project.rs
crates/sidebar/src/: sidebar.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  reliability.rs  zed.rs
