[package]
name = "notes"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/notes.rs"
doctest = false

[dependencies]
anyhow.workspace = true
collections.workspace = true
editor.workspace = true
fs.workspace = true
gpui.workspace = true
markdown.workspace = true
menu.workspace = true
project.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
